# document-text-to-speech-converter

./: .gitignore  DEPLOYMENT.md  Dockerfile  Procfile  README.md  WEB_APP_README.md  app.py  cli_main.py  pyproject.toml  render-deploy.yaml  render.yaml  requirements.txt  run_webapp.py  setup.py  start.py
examples/: example_usage.py  sample.txt
src/: cli.py  config_manager.py  document_readers.py  google_tts_engine.py  gtts_engine.py  gui.py  tts_engine.py
web_app/: app.py
web_app/static/css/: style.css
web_app/static/js/: app.js
web_app/templates/: base.html  error.html  index.html
